<resources>
    <string name="app_name">MerLTLReader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="instance_settings">Instance Settings</string>
    <string name="pref_summary_instance_url">Instance url</string>
    <string name="pref_title_instance_url">Instance url</string>
    <string name="pref_summary_email">User Email</string>
    <string name="email">User Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="compose_form_publish_loud">トゥート！</string>
    <string name="compose_form_placeholder">進捗どうですか？</string>
    <string name="requireInstanceURL">please set Instance URL</string>
    <string name="requireLogin">please login</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="pref_summary_volume_master">master</string>
    <string name="pref_title_volume_master">Master</string>
    <string name="pref_summary_volume_name">volume of name</string>
    <string name="pref_title_volume_name">Name</string>
    <string name="pref_summary_stream_type">stream type of text-to-speech</string>
    <string name="pref_title_stream_type">Stream type</string>

    <string name="shortcut_short_label1">LTL_TTS</string>
    <string name="shortcut_long_label1">MerLTLReader Speak LTL</string>
    <string name="shortcut_disable_label1">無効なショートカット</string>
</resources>
